Attribut preload pour le css

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
 <link rel="preconnect" href="https://d36m9g8osz0lpw.cloudfront.net">
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css"></noscript>
 
-	<link rel="preload" href="./assets/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="./assets/style.min.css"></noscript>
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+
+	<link rel="preload" href="./assets/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="./assets/style.min.css">
 
 
 	<!-- 
