Balises OpenGraph et TwitterCards

--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
 	<meta name="Description" content="Découvrir Nina Carducci, photographe professionnelle à Bordeaux. 
 	Shooting, retouches ,albums pour vos portraits et évènements : concert, mariage, entreprise...">
 	<meta name="robots" content="index, follow">
-	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
--->	
-
-
-<link rel="preconnect" href="https://d36m9g8osz0lpw.cloudfront.net">
+	<link rel="preconnect" href="https://d36m9g8osz0lpw.cloudfront.net">
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-
-	<link rel="preload" href="./assets/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="stylesheet" href="./assets/style.min.css">
-
-
-	<!-- 
-		<link rel="preconnect" href="https://fonts.googleapis.com" defer>
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin defer>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet" defer> 
--->
-	
-	
+	<link rel="preload" href="./assets/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="./assets/style.css">	
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.min.js"  defer ></script>
-	<script src="./assets/scripts.js"  defer></script>	
+	<script src="./assets/scripts.js"  defer></script>
+	<meta property="og:site_name" content="Nina Carducci - Photographe professionnelle" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://bouchirab.github.io/OpenClassroomsProjet4/" />
+	<meta property="og:locale" content="fr_FR">
+	<meta property="og:title" content="Nina Carducci - Photographe professionnelle" />
+	<meta property="og:description" content="Découvrir Nina Carducci, photographe professionnelle à Bordeaux. 
+	Shooting, retouches ,albums pour vos portraits et évènements : concert, mariage, entreprise..." />
+	<meta property="og:image" content="https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/ninaFacebook.webp">
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@ninacarducci" />
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle" />
+	<meta name="twitter:description" content="Découvrir Nina Carducci, photographe professionnelle à Bordeaux. 
+	Shooting, retouches ,albums pour vos portraits et évènements : concert, mariage, entreprise..."/>
+	<meta name="twitter:image" content="https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/ninaX.webp" />
+	<meta name="twitter:url" content="https://bouchirab.github.io/OpenClassroomsProjet4/"/>
 </head>
 <body>
+
 <header class="top-header">
 	<h1 class="name">Nina Carducci <span> Photographe professionnelle </span></h1>
 	<nav class="nav">   
@@ -42,7 +42,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Icone Instagram" ></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Icone Instagram"></a></li>
 		</ul>
 	</nav>
 </header>
