balise google-sie-verification

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<meta name="Description" content="Découvrir Nina Carducci, photographe professionnelle à Bordeaux. 
 	Shooting, retouches ,albums pour vos portraits et évènements : concert, mariage, entreprise...">
 	<meta name="robots" content="index, follow">
+	<meta name="language" content="fr-FR">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-site-verification" content="_43VAqzbK9BynIOuxrdtQ2HucrQ0asO03LdrxKqcaio" />
 	<link rel="preconnect" href="https://d36m9g8osz0lpw.cloudfront.net">
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
