--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				"streetAddress": "68 avenue Alsace-Lorraine"
 			},
 			"name": "Nina Carducci - Photographe",
-			"openingHours": ["Mo-Fr 10:00-19:00"],
+			"openingHours": "Mo-Fr 10:00-19:00",
 			"telephone": "05 56 67 78 89",
 			"url": "https://bouchirab.github.io/OpenClassroomsProjet4/",
 			"description": "Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches ,albums pour vos portraits et évènements",
