--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
 			"serviceType": "Professional photographer",
 			"provider": {
 				"@type": "LocalBusiness",
-				"name": "Nina Carducci- Photographe"
-			},
-			"openingHours": "Mo-Fr 10:00-19:00",
-			"telephone": "05 56 67 78 89",
-			"url": "https://bouchirab.github.io/OpenClassroomsProjet4/",
-			"description": "Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches ,albums pour vos portraits et évènements",
-			"address": {
+				"name": "Nina Carducci- Photographe",
+				"openingHours": "Mo-Fr 10:00-19:00",
+				"telephone": "05 56 67 78 89",
+				"url": "https://bouchirab.github.io/OpenClassroomsProjet4/",
+				"description": "Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches ,albums pour vos portraits et évènements",
+				"address": {
 				"@type": "PostalAddress",
 				"addressLocality": "Bordeaux",
 				"addressCountry": "FR",
 				"postalCode": "33200",
 				"streetAddress": "68 avenue Alsace-Lorraine"
+				}
 			},
 			"hasOfferCatalog": {
 				"@type": "OfferCatalog",
