Correction Référencement local4

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 				"openingHours": "Mo-Fr 10:00-19:00",
 				"telephone": "05 56 67 78 89",
 				"url": "https://bouchirab.github.io/OpenClassroomsProjet4/",
+				"priceRange": "50€ 400€",
+				"image": "https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/nina.jpg",
 				"description": "Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches ,albums pour vos portraits et évènements",
 				"address": {
 				"@type": "PostalAddress",
