--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li>
-					<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Icone Instagram"></a>
+					<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/insta.webp" alt="Icone Instagram"></a>
 				</li>
 			</ul>
 		</nav>
