--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Photographe Nina Carducci</title>
-	<meta name="Description" content="Découvrir Nina Carducci, photographe professionnelle à Bordeaux.Shooting, retouches ,albums pour vos portraits et évènements : concert, mariage, entreprise...">
+	<title> Nina Carducci - Photographe professionnelle à Bordeaux</title>
+	<meta name="Description" content="Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches, albums pour vos portraits et évènements (concerts, mariages, entreprises...)">
 	<meta name="robots" content="index, follow">
 	<meta name="language" content="fr-FR">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,12 +24,12 @@
 	<meta property="og:url" content="https://bouchirab.github.io/OpenClassroomsProjet4/" />
 	<meta property="og:locale" content="fr_FR">
 	<meta property="og:title" content="Nina Carducci - Photographe professionnelle" />
-	<meta property="og:description" content="Découvrir Nina Carducci, photographe professionnelle à Bordeaux.Shooting, retouches ,albums pour vos portraits et évènements : concert, mariage, entreprise..." />
+	<meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches, albums pour vos portraits et évènements (concerts, mariages, entreprises...)" />
 	<meta property="og:image" content="https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/ninaFacebook.webp">
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@ninacarducci" />
 	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle" />
-	<meta name="twitter:description" content="Découvrir Nina Carducci, photographe professionnelle à Bordeaux.Shooting, retouches ,albums pour vos portraits et évènements : concert, mariage, entreprise..." />
+	<meta name="twitter:description" content="Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches, albums pour vos portraits et évènements (concerts, mariages, entreprises...)" />
 	<meta name="twitter:image" content="https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/ninaX.webp" />
 	<meta name="twitter:url" content="https://bouchirab.github.io/OpenClassroomsProjet4/" />
 	<script type="application/ld+json">
@@ -49,7 +49,13 @@
 			"priceRange": "50€ 400€",
 			"image": "https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/nina.jpg",
 			"description": "Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches ,albums pour vos portraits et évènements",
-			"openingHours": "Mo-Fr 10:00-19:00",			
+			"openingHours": "Mo-Fr 10:00-19:00",	
+          "geo": {
+				"@type": "GeoCoordinates",
+				"latitude": 44.84667300938,
+				"longitude": -0.606579976439
+			},
+
 			"hasOfferCatalog": {
 				"@type": "OfferCatalog",
 				"name": "Photograph services",
@@ -79,7 +85,7 @@
 
 <body>
 	<header class="top-header">
-		<h1 class="name">Nina Carducci <span> Photographe professionnelle </span></h1>
+		<h1 class="name">Nina Carducci <span> Photographe à Bordeaux</span></h1>
 		<nav class="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
@@ -87,14 +93,11 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li>
-					<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/insta.webp" alt="Icone Instagram"></a>
+					<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/insta.webp" alt="Instagram icon"></a>
 				</li>
 			</ul>
 		</nav>
 	</header>
-	<!-- 
-		<div id="header">
-			 -->
 	<main>
 		<aside id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
@@ -104,13 +107,13 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="Homme de dos qui marche">
+					<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="Photo of a man walking from behind">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="Foule de spectateur">
+					<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo of a crowd of spectators">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="Photo de mariage">
+					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="Pwedding photo">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -122,15 +125,12 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</aside>
-		<!-- 
-			</div>
-			 -->
 		<article id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.webp" alt="Photo de Nina Carducci" class="pleft">
+				<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci" class="pleft">
 			</div>
 			<div id="about-me">
-				<h2 class="about-me__title">A propos de moi, Nina Carducci</h2>
+				<h2 class="about-me__title">A propos de moi : Nina Carducci, photographe à Bordeaux</h2>
 				<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 				<p> Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos. </p>
 			</div>
@@ -139,15 +139,15 @@
 			<h3 class="title">Portfolio</h3>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" alt="Photo d'un concert">
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="Photo d'un hommme en entreprise">
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="Photo de 2 femmes en entreprise">
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.webp" alt="Photo des mains des mariés">
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.webp" alt="Photo portrait d'un hommme">
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.webp" alt="Photo d'un couple de mariés">
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" alt="Photo portrait d'une femme">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill.webp" alt="Photo d'un chanteur en concert sur scène">
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" alt="photo d'une femme à son bureau en entreprise">
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" alt="Photo from a concert">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="Portrait of a man in business">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="Photo of two women in business">
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.webp" alt="Wedding photo">
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.webp" alt="portrait of a man">
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.webp" alt="Photo of a wedding couple">
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" alt="portrait of a woman">
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill.webp" alt="Photo of a singer performing on stage">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" alt="photo of a woman at her office in a company">
 				</div>
 			</div>
 			<div class="quote">
@@ -197,12 +197,12 @@
 		<div class="quote">
 			<figure>
 				<blockquote>
-					<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+					<span class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</span>
 				</blockquote>
 				<figcaption class="quote__author"> - Richard Avedon </figcaption>
 			</figure>
 		</div>
-		<footer id="contact">
+		<aside id="contact">
 			<div class="container">
 				<div class="form-container">
 					<h2>Une question ? Une demande de devis ?</h2>
@@ -218,10 +218,23 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.webp" alt="Appareil photo" class="pright">
+					<img src="./assets/images/camera.webp" alt="camera" class="pright">
 				</div>
-			</div>
-		</footer>
+		
+			</aside>
+			<footer >
+				<div itemscope itemtype="https://schema.org/LocalBusiness">
+					<!--<span itemprop="name">Nina Carducci - Photographe professionnelle</span>	-->
+					<div itemprop="address" itemscope itemtype=”http://schema.org/PostalAddress”>
+						<span itemprop="streetAddress">68 avenue Alsace-Lorraine</span> , 
+						<span itemprop="postalCode">32000</span> 
+						<span itemprop="addressLocality">Bordeaux </span> 
+					</div>
+					<div>
+						- Téléphone : <span itemprop="telephone"> 05 56 67 78 89</span>
+					</div>
+					</div>
+			</footer>
 	</main>
 </body>
 
