--- a/index.html
+++ b/index.html
@@ -223,17 +223,7 @@
 		
 			</aside>
 			<footer >
-				<div itemscope itemtype="https://schema.org/LocalBusiness">
-					<!--<span itemprop="name">Nina Carducci - Photographe professionnelle</span>	-->
-					<div itemprop="address" itemscope itemtype=”http://schema.org/PostalAddress”>
-						<span itemprop="streetAddress">68 avenue Alsace-Lorraine</span> , 
-						<span itemprop="postalCode">32000</span> 
-						<span itemprop="addressLocality">Bordeaux </span> 
-					</div>
-					<div>
-						- Téléphone : <span itemprop="telephone"> 05 56 67 78 89</span>
-					</div>
-					</div>
+					68 avenue Alsace-Lorraine, 32000 Bordeaux - Téléphone : 05 56 67 78 89</span>
 			</footer>
 	</main>
 </body>
