--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<link rel="preconnect" href="https://d36m9g8osz0lpw.cloudfront.net">
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="preload" href="./assets/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="preload" href="./assets/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.min.js" defer></script>
@@ -44,18 +44,17 @@
 				"addressCountry": "FR",
 				"postalCode": "33200",
 				"streetAddress": "68 avenue Alsace-Lorraine"
-				},
+			},
 			"url": "https://bouchirab.github.io/OpenClassroomsProjet4/",
 			"priceRange": "50€ 400€",
 			"image": "https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/nina.jpg",
 			"description": "Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches ,albums pour vos portraits et évènements",
-			"openingHours": "Mo-Fr 10:00-19:00",	
-          "geo": {
+			"openingHours": "Mo-Fr 10:00-19:00",
+			"geo": {
 				"@type": "GeoCoordinates",
 				"latitude": 44.84667300938,
 				"longitude": -0.606579976439
 			},
-
 			"hasOfferCatalog": {
 				"@type": "OfferCatalog",
 				"name": "Photograph services",
@@ -220,11 +219,9 @@
 				<div class="picture right">
 					<img src="./assets/images/camera.webp" alt="camera" class="pright">
 				</div>
-		
-			</aside>
-			<footer >
-					68 avenue Alsace-Lorraine, 32000 Bordeaux - Téléphone : 05 56 67 78 89</span>
-			</footer>
+		</aside>
+		<footer> 68 avenue Alsace-Lorraine, 32000 Bordeaux - Téléphone : 05 56 67 78 89</span>
+		</footer>
 	</main>
 </body>
 
