--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<link rel="preconnect" href="https://d36m9g8osz0lpw.cloudfront.net">
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="preload" href="./assets/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="preload" href="./assets/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="./assets/style.css">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.min.js" defer></script>
@@ -106,13 +106,13 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="Photo of a man walking from behind">
+					<img src="./assets/images/slider/ryoji-iwata.webp" width="928" height="429" class="d-block w-100" alt="Photo of a man walking from behind">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo of a crowd of spectators">
+					<img src="./assets/images/slider/nicholas-green.webp" width="928" height="429" class="d-block w-100" alt="photo of a crowd of spectators">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="Pwedding photo">
+					<img src="./assets/images/slider/edward-cisneros.webp" width="928" height="429" class="d-block w-100" alt="Pwedding photo">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -126,7 +126,7 @@
 		</aside>
 		<article id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci" class="pleft">
+				<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci" class="pleft" width="560" height="558">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi : Nina Carducci, photographe à Bordeaux</h2>
