--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<link rel="preconnect" href="https://d36m9g8osz0lpw.cloudfront.net">
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="preload" href="./assets/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="preload" href="./assets/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.min.js" defer></script>
@@ -92,7 +92,7 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li>
-					<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/insta.webp" alt="Instagram icon"></a>
+					<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/insta.webp" width="20" height="20" alt="Instagram icon"></a>
 				</li>
 			</ul>
 		</nav>
@@ -109,10 +109,10 @@
 					<img src="./assets/images/slider/ryoji-iwata.webp" width="928" height="429" class="d-block w-100" alt="Photo of a man walking from behind">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green.webp" width="928" height="429" class="d-block w-100" alt="photo of a crowd of spectators">
+					<img src="./assets/images/slider/nicholas-green.webp" width="928" height="429" class="d-block w-100" alt="photo of a crowd of spectators" loading="lazy">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros.webp" width="928" height="429" class="d-block w-100" alt="Pwedding photo">
+					<img src="./assets/images/slider/edward-cisneros.webp" width="928" height="429" class="d-block w-100" alt="Pwedding photo" loading="lazy">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -126,7 +126,7 @@
 		</aside>
 		<article id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci" class="pleft" width="560" height="558">
+				<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci" width="560" height="558">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi : Nina Carducci, photographe à Bordeaux</h2>
@@ -138,15 +138,15 @@
 			<h3 class="title">Portfolio</h3>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" alt="Photo from a concert">
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="Portrait of a man in business">
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="Photo of two women in business">
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.webp" alt="Wedding photo">
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.webp" alt="portrait of a man">
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.webp" alt="Photo of a wedding couple">
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" alt="portrait of a woman">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill.webp" alt="Photo of a singer performing on stage">
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" alt="photo of a woman at her office in a company">
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" width="440" height="440" alt="Photo from a concert">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" width="440" height="440" alt="Portrait of a man in business">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" width="440" height="440" alt="Photo of two women in business">
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.webp" width="440" height="440" alt="Wedding photo">
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.webp" width="440" height="440" alt="portrait of a man">
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.webp" width="440" height="440" alt="Photo of a wedding couple">
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" width="440" height="440" alt="portrait of a woman">
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill.webp" width="440" height="440" alt="Photo of a singer performing on stage">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" width="440" height="440" alt="photo of a woman at her office in a company">
 				</div>
 			</div>
 			<div class="quote">
@@ -217,7 +217,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.webp" alt="camera" class="pright">
+					<img src="./assets/images/camera.webp" width="419" height="418"    alt="camera" class="pright">
 				</div>
 		</aside>
 		<footer> 68 avenue Alsace-Lorraine, 32000 Bordeaux - Téléphone : 05 56 67 78 89</span>
