--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="preload" href="./assets/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/style.min.css">
-	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.min.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
@@ -126,7 +126,7 @@
 		</aside>
 		<article id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci" width="560" height="558">
+				<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci" width="560" height="558" class="pleft">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi : Nina Carducci, photographe à Bordeaux</h2>
