--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="language" content="fr-FR">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="canonical" href="https://bouchirab.github.io/OpenClassroomsProjet4/">
-	<meta name="google-site-verification" content="_43VAqzbK9BynIOuxrdtQ2HucrQ0asO03LdrxKqcaio" />
+	<meta name="google-site-verification" content="_43VAqzbK9BynIOuxrdtQ2HucrQ0asO03LdrxKqcaio">
 	<link rel="preconnect" href="https://d36m9g8osz0lpw.cloudfront.net">
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
@@ -19,19 +19,19 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.min.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
-	<meta property="og:site_name" content="Nina Carducci - Photographe professionnelle" />
-	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://bouchirab.github.io/OpenClassroomsProjet4/" />
+	<meta property="og:site_name" content="Nina Carducci - Photographe professionnelle">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://bouchirab.github.io/OpenClassroomsProjet4/">
 	<meta property="og:locale" content="fr_FR">
-	<meta property="og:title" content="Nina Carducci - Photographe professionnelle" />
-	<meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches, albums pour vos portraits et évènements (concerts, mariages, entreprises...)" />
+	<meta property="og:title" content="Nina Carducci - Photographe professionnelle">
+	<meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches, albums pour vos portraits et évènements (concerts, mariages, entreprises...)">
 	<meta property="og:image" content="https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/ninaFacebook.webp">
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@ninacarducci" />
-	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle" />
-	<meta name="twitter:description" content="Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches, albums pour vos portraits et évènements (concerts, mariages, entreprises...)" />
-	<meta name="twitter:image" content="https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/ninaX.webp" />
-	<meta name="twitter:url" content="https://bouchirab.github.io/OpenClassroomsProjet4/" />
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@ninacarducci">
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle">
+	<meta name="twitter:description" content="Nina Carducci, photographe professionnelle à Bordeaux : Shooting, retouches, albums pour vos portraits et évènements (concerts, mariages, entreprises...)">
+	<meta name="twitter:image" content="https://bouchirab.github.io/OpenClassroomsProjet4/assets/images/ninaX.webp">
+	<meta name="twitter:url" content="https://bouchirab.github.io/OpenClassroomsProjet4/">
 	<script type="application/ld+json">
 		{
 			"@context": "https://schema.org/",
@@ -219,8 +219,9 @@
 				<div class="picture right">
 					<img src="./assets/images/camera.webp" width="419" height="418"    alt="camera" class="pright">
 				</div>
+			</div>	
 		</aside>
-		<footer> 68 avenue Alsace-Lorraine, 32000 Bordeaux - Téléphone : 05 56 67 78 89</span>
+		<footer> 68 avenue Alsace-Lorraine, 32000 Bordeaux - Téléphone : 05 56 67 78 89
 		</footer>
 	</main>
 </body>
